# sample-chat

./: .gitignore  .sample.env  Dockerfile  README.md  app.py  build.sh  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  run.sh  tailwind.config.js
static/css/: input.css  styles.css
static/js/: chat.js
templates/: index.html
