[tool.poetry]
name = "chat-demo"
version = "0.1.0"
description = ""
authors = ["bessavagner <bessavagner@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.5"
jinja2 = "^3.1.4"
aiohttp-jinja2 = "^1.6"
aiohttp-cors = "^0.7.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
